// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders 1`] = `
<div
  className="box"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap0 xsDirectionRow"
  >
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
      />
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
      >
        0%
      </div>
    </div>
  </div>
  <div
    className="box marginBottom2 marginTop2 pill secondary"
    style={
      Object {
        "height": 16,
        "width": "100%",
      }
    }
  >
    <div
      className="box pill successBase"
      style={
        Object {
          "height": 16,
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="Text fontSize100 subtleText alignStart breakWord fontWeightNormal"
  />
</div>
`;

exports[`ProgressBar renders an accessibility label 1`] = `
<div
  className="box"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap0 xsDirectionRow"
  >
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
      />
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
      >
        0%
      </div>
    </div>
  </div>
  <div
    aria-label="Test Accessibility Label"
    className="box marginBottom2 marginTop2 pill secondary"
    style={
      Object {
        "height": 16,
        "width": "100%",
      }
    }
  >
    <div
      className="box pill successBase"
      style={
        Object {
          "height": 16,
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="Text fontSize100 subtleText alignStart breakWord fontWeightNormal"
  />
</div>
`;
